# apsi-bug-tracker

./: .dockerignore  .gitignore  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
containers/: docker-compose.yml  local.env
database/: database.py  insert_example.py  model.py  requirements-dev.txt  requirements.txt  select_example.py
frontend/: README.md  package-lock.json  package.json  tsconfig.json
frontend/src/: app.tsx
lambda/: README.md  handler.py
lambda/create_issues/: .dockerignore  index.py  requirements-dev.txt
lambda/create_problem/: create_problem.py  index.py  requirements.txt
lambda/database/: .gitignore  README.md  database.py  local.env  main.py  model.py  requirements.txt  select_example.py  setup.cfg
lambda/database/alembic/: env.py
lambda/database/alembic/versions/: d1eab88461e1_first_migration.py
lambda/database/apsi_database/: config.py  database.py  insert_example.py  main.py  model.py  select_example.py  upgrade_head.py
lambda/database/apsi_database/models/: __init__.py  bug.py  component.py  key_word.py  message.py  module.py  product.py  related_user.py  report.py  report_class.py  report_keyword.py  role.py  status.py  urgency.py  user.py  weight.py
lambda/delete_problem/: .dockerignore  delete_problem.py  index.py  test_lambda.py
lambda/example_lambda/: README.md  index.py
lambda/get_issues/: get_issues.py  index.py  lambda_parser.py  requirements-dev.txt  requirements.txt
lambda/get_problem_by_id/: .dockerignore  index.py  (+2 more)
lib/: apsi-bug-tracker-stack.ts
test/: apsi-bug-tracker.test.ts
(+53 files in other folders)
