[metadata]
name = apsi_database
version = 0.1.0
description = "Database utils"
long_description = file: README.md
classifiers =
    Programming Language :: Python

[build_ext]
inplace=1

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
# install_requires =
#     numpy>=1.19.2
#     opencv-contrib-python>=4.5.1.48
#     pandas>=1.1.2
#     pyquaternion>=0.9.5
#     scikit-learn>=1.0
#     scipy>=1.4.1
#     shapely>=1.7.1
#     tensorflow>=2.4.1
#     trimesh>=3.8.4

