[metadata]
name = apsi_database
version = 0.1.0
description = "Database utils"
long_description = file: README.md
classifiers =
    Programming Language :: Python

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires =
    sqlalchemy~=1.4.27
    pydantic~=1.8.2
    python-dotenv~=0.19.2

